test/sematest/valid/test5.valid.java
/* -*- coding:utf-8; mode:java; -*- */

class One {

	public static void main(String[] args) { }

	public void println(int a, int b, int c) {
	}

}

class Two {

	public One out;

}

class Three {

	public Two System;

	public void test() {
		System.out.println(1, 2, 3);
	}

}
