test/sematest/invalid/identifier_system_in_scope4.java
class A {
  public static void main(String[] a) {
    int System;
    System.out.println(3);
  }
}